[project]
name = "pertflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "anndata>=0.12.10",
    "datasets>=4.8.4",
    "diffrax>=0.7.2",
    "einops>=0.8.2",
    "einx>=0.4.3",
    "ema-pytorch>=0.7.9",
    "harmonypy>=0.2.0",
    "huggingface-hub>=1.8.0",
    "hyper-connections>=0.4.9",
    "ipykernel>=7.2.0",
    "jax[cuda13]>=0.9.2",
    "leidenalg>=0.11.0",
    "numpy>=2.4.3",
    "ott-jax>=0.6.0",
    "pot>=0.9.5",
    "scanpy>=1.12",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.26.0",
    "transformers>=5.5.3",
    "wandb>=0.25.1",
]
